# HDiffDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/example/binge/com/hdiffdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLog.h  HDiffPatch.h  Native_HDiff.cpp  Native_HPatch.cpp
app/src/main/cpp/libHDiffPatch/HDiff/: diff.cpp
app/src/main/cpp/libHDiffPatch/HDiff/private_diff/: bytes_rle.cpp
app/src/main/java/example/binge/com/hdiffdemo/: HDiffPatch.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/example/binge/com/hdiffdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
